# testgrid

./: BUILD.bazel  go.mod  go.sum  hackathon.txt
app/: README.md  app.yaml  deploy.sh  pubspec.yaml
app/lib/: main.dart
app/lib/pb/config/: config.pb.dart  config.pbenum.dart  config.pbjson.dart
app/lib/pb/custom_evaluator/: custom_evaluator.pb.dart  custom_evaluator.pbenum.dart  custom_evaluator.pbjson.dart
app/lib/pb/issue_state/: issue_state.pb.dart  issue_state.pbenum.dart  issue_state.pbjson.dart
app/lib/pb/state/: state.pb.dart  state.pbenum.dart  state.pbjson.dart
app/lib/pb/summary/: summary.pb.dart  summary.pbenum.dart  summary.pbjson.dart
app/lib/pb/test_status/: test_status.pb.dart  test_status.pbenum.dart  test_status.pbjson.dart
app/lib/pb/updater/: updater.pb.dart  updater.pbenum.dart  (+2 more)
app/test/: widget_test.dart
cmd/alerter/: BUILD.bazel  main.go
hack/: update-dart-protos.sh  update-protos.sh
hack/wopr/: app.yaml  main.go
hack/wopr/tictactoe/: toe.go  toe_test.go
hackathon/: config.yaml
hackathon/cmd/image/: main.go
hackathon/cmd/minesweeper/: app.yaml  main.go
hackathon/cmd/updater/: in  main.go  pattern-hint.txt  pattern.txt
hackathon/pkg/hackupdater/: updater.go
hackathon/pkg/image/: image.go
hackathon/pkg/imagecompiler/: imagecompiler.go
hackathon/pkg/minesweeper/: minesweeper.go
pb/config/: config.pb.go  config.proto
pkg/alerter/: BUILD.bazel  alerter.go  alerter_test.go  klaxon.go
pkg/alerter/log/: BUILD.bazel  alert_logger.go
pkg/summarizer/: summary.go
pkg/updater/: updater.go
web/: README.md
(+6 files in other folders)
