load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["klaxon.go"],
    importpath = "github.com/GoogleCloudPlatform/testgrid/pkg/alerter",
    visibility = ["//visibility:public"],
    deps = [
        "//pb/config:go_default_library",
        "//pb/summary:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
